[project]
name = "autoregressiveblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy<2.0.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]
